hello-docker-go/k8s/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-docker-go-service
  namespace: hello-docker-go
  labels:
    app: backend-service
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 1234
