hello-docker-go/k8s/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-docker-go-ingress
  namespace: hello-docker-go
  #annotations:
  #  nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: hello-docker-go.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-docker-go-service
                port:
                  number: 80
